--- a/share/src/main/res/layout/activity_share.xml
+++ b/share/src/main/res/layout/activity_share.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="89dp"
-        android:text="去登录"
+        android:text="去登录组件"
         android:onClick="shareLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
